# fastapi-movie-manager

./: .dockerignore  .env.template  .gitignore  .template.env  Dockerfile  README.md  app.sh  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2026_02_26_1828-d7e9db3afe4d_initial.py  95716fee50e4_initial.py  ec2a4bd02f02_created_at_updated_at.py
app/: app.py  lifespan.py  main.py
app/api/: __init__.py
app/api/common_routers/: __init__.py  docs.py  health.py  root.py
app/api/internal_routers/: __init__.py  health.py  healthcheck.py
app/api/v1/: __init__.py
app/api/v1/dependencies/: __init__.py  base.py  ownerships.py  rbac.py
app/api/v1/dependencies/requests/: __init__.py  auth.py  movie.py  user.py
app/api/v1/dependencies/security/: __init__.py  base.py  movie_ownership.py  rbac.py  user_ownership.py
app/api/v1/routers/: __init__.py  auth.py  health.py  movie.py  movies.py  user.py  users.py
app/api/v1/schemas/: __init__.py  auth.py  base.py  health.py  movie.py  user.py
app/core/: __init__.py  config.py  constants.py  limiter.py  loggers.py  typing.py  typing_.py
app/core/config/: __init__.py  api.py  app.py  database.py  logging_.py  redis_.py  security.py  settings.py
app/core/exceptions/: __init__.py  errors.py  exc.py  exc_handlers.py  exc_helpers.py
app/core/exceptions/exc_handlers/: __init__.py  base.py  common_handlers.py  db_handler.py  global_handler.py  http_handler.py  validation_handler.py
app/core/loggers/: __init__.py  common.py  common_log.py  error.py  error_log.py  interception.py  json.py  json_log.py  stream.py
app/core/logging/: __init__.py  interceptions.py  log_helper.py
app/core/logging/loggers/: __init__.py  base.py  common.py  error.py  intercept.py  json.py  stream.py
app/core/logging_/: __init__.py  intercept_handler.py  log_helper.py
app/core/logging_/loggers/: __init__.py  base.py  common.py  error.py  intercept.py  json.py  stream.py
app/core/middlewares/: __init__.py  auth.py  cors.py  exception.py  logging.py
app/core/security/: __init__.py  pwd.py  pwd_helpers.py  token.py  token_helpers.py  token_schemas.py
app/core/security/pwd_helpers/: __init__.py  base.py  bcrypt_helper.py
app/core/security/token_helpers/: __init__.py  base.py  jwt_helper.py
app/core/security/token_repositories/: __init__.py  base.py  repository.py
app/core/security/tokens/: __init__.py  access_jwt.py  access_token.py  base.py  base_jwt.py  base_token.py  refresh_jwt.py  refresh_token.py
app/database/: __init__.py  db.py  db_helpers.py  unitofwork.py
app/database/db_helpers/: __init__.py  base.py  sqlalchemy_helper.py
app/database/db_managers/: __init__.py  base.py  sqlalchemy.py
app/database/models/: __init__.py  base.py  movie.py  user.py
app/database/models/mixins/: __init__.py  created_at.py  dated_at.py  int_id_pk.py  uuid_id_pk.py
app/database/repositories/: __init__.py  base.py  movie.py  user.py
app/database/unit_of_works/: __init__.py  base.py  sqlalchemy.py  sqlalchemy_uow.py
app/domains/: __init__.py  base.py  movie.py  user.py
app/schemas/: __init__.py  error.py  movie.py  token.py  user.py
app/security/: __init__.py  token_schemas.py
app/security/auth/: __init__.py  schemas.py
app/security/auth/repositories/: __init__.py  base.py  jwt.py
app/security/auth/tokens/: __init__.py  access_jwt.py  base.py  refresh_jwt.py
app/security/auth_managers/: __init__.py  base.py  jwt.py
app/security/password_managers/: __init__.py  base.py  bcrypt.py
app/security/pwd_helpers/: __init__.py  base.py  bcrypt_helper.py
app/security/token_helpers/: __init__.py  base.py  jwt_helper.py
app/security/token_repositories/: __init__.py  base.py  jwt_repository.py
app/security/tokens/: __init__.py  access_jwt.py  base.py  refresh_jwt.py
app/services/: __init__.py  auth.py  base.py  movie.py  user.py
app/services/service_helpers/: __init__.py  base.py  sqlalchemy_helper.py
app/services/service_managers/: __init__.py  base.py  sqlalchemy.py
envs/: .env.template
scripts/health_check/: all.py  app.py  postgres.py  redis.py
