[project]
name = "fastapi-movies"
version = "0.1.0"
description = "FastAPI Movies Project"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Gleb Mikhalev", email = "gleb1@bk.ru" }]
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.2",
    "fastapi-limiter>=0.1.6",
    "fastapi[standard]>=0.116.2",
    "loguru>=0.7.3",
    "orjson>=3.11.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "redis[hiredis]>=6.4.0",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
lint = ["ruff>=0.13.0"]
test = [
    "pytest>=8.4",
    "pytest-cov>=6.1",
    "pytest-randomly>=3.16",
    "pytest-xdist>=3.7",
    "pytest-asyncio>=1.0",
    "covdefaults>=2.3",
]

[tool.ruff]
# Ruff config: https://docs.astral.sh/ruff/settings
preview = true
line-length = 95
target-version = "py313"
extend-exclude = ["alembic/", "tests/"]

[tool.ruff.format]
preview = true
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "D203",   # blank line before class docstring (-> D211)
    "D212",   # docstring starts from the first line (-> D213)
    "COM812", # missing trailing comma (due to ruff conflict)
    "CPY001", # copyright notice
    "D100",   # docstring in public module
    "D101",   # docstring in public class
    "D104",   # docstring in public package
    "RUF067", # `__init__` module should only contain docstrings and re-exports
]

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__tablename__"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = [
    "T201",    # `print` found
    "BLE001",  # Do not catch blind exception: `Exception`
    "S404",    # `subprocess` module is possibly insecure
    "S603",    # `subprocess` call: check for execution of untrusted input
    "PLW1510", # `subprocess.run` without explicit `check` argument
]
"app/core/exceptions/errors.py" = [
    "D107", # missing docstring in `__init__`
]
"app/database/models/mixins/*.py" = [
    "D102",    # missing docstring in public method
    "PLR6301", # method could be a function, class method, or static method
]

[tool.pytest.ini_options]
# Pytest config: http://doc.pytest.org/en/latest/customize.html
testpaths = ["tests"]
xfail_strict = true
filterwarnings = ["error"]
asyncio_mode = "strict"

addopts = [
    "--strict-config",
    "--strict-markers",
    "--doctest-modules",
    # pytest-cov
    "--cov=app",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-fail-under=0",
    # pytest-xdist
    "-n=auto",
]

[tool.coverage.run]
# Coverage config: https://coverage.readthedocs.io/
plugins = ["covdefaults"]
omit = []
